# aithing-mac

./: README.md
AIThing/: AppDelegate.swift
AIThing/Views/SettingsView/: SettingsView.swift
aithing-app/: .gitignore  package.json
aithing-app/src/: index.html  main.js  styles.css
aithing-app/src-tauri/: Cargo.toml  tauri.conf.json
aithing-app/src-tauri/capabilities/: default.json
aithing-app/src-tauri/icons/: icon.icns
aithing-app/src-tauri/src/: lib.rs  main.rs
